--- a/package.json
+++ b/package.json
@@ -4,11 +4,30 @@
   "description": "Starting kit for new projects",
   "main": "index.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config ./config/webpack.config.prod.js",
+    "server": "webpack-dev-server --config ./config/webpack.config.dev.js --hot",
+    "test": "flow status"
   },
   "keywords": [
     "starter-kit"
   ],
   "author": "Gleb Chekushin <mail@glebchek.com>",
-  "license": "WTFPL"
+  "license": "WTFPL",
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.6.3",
+    "babel-loader": "^8.0.6",
+    "flow-bin": "^0.110.1",
+    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "preact": "^10.0.1"
+  }
 }
