--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-flow"],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["./src"],
+        "alias": {
+          "react": "preact/compat",
+          "react-dom": "preact/compat"
+        }
+      }
+    ]
+  ]
 }
