--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
     "flow-bin": "^0.110.1",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
