Replace PreactX with vanilla React
To get configuration working at least with react at first
Don't know if will want replace it back at future. We'll see

--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,4 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-flow"],
-  "plugins": [
-    [
-      "module-resolver",
-      {
-        "root": ["./src"],
-        "alias": {
-          "react": "preact/compat",
-          "react-dom": "preact/compat"
-        }
-      }
-    ]
-  ]
+  "plugins": []
 }
