--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "@babel/preset-react": "^7.7.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
-    "babel-plugin-module-resolver": "^3.2.0",
     "eslint": "^6.7.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-import-resolver-babel-module": "^5.1.0",
     "eslint-plugin-flowtype": "^4.4.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -39,6 +37,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "preact": "^10.0.5"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
