More sane ESLint config
And added lint-related commands

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,12 @@
 {
   "parser": "babel-eslint",
+  "extends": [
+    "airbnb",
+    "plugin:react/recommended",
+    "plugin:flowtype/recommended"
+  ],
   "env": {
-    "browser": true,
-    "es6": true
+    "browser": true
   },
-  "extends": ["airbnb"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
-  "plugins": ["react", "flowtype"],
-  "rules": {},
-  "settings": {}
+  "plugins": ["react", "flowtype"]
 }
