--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "webpack --config ./config/webpack.config.prod.js",
     "server": "webpack-dev-server --config ./config/webpack.config.dev.js --hot",
-    "test": "flow status"
+    "test": "npm run lint && flow status",
+    "lint": "eslint \"./src/**/*.{js,jsx}\"",
+    "lint-fix": "eslint --fix \"./src/**/*.{js,jsx}\"" 
   },
   "keywords": [
     "starter-kit"
