Add eslint-loader to check files before build
Also fixed linting problems with source files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,8 @@
   "env": {
     "browser": true
   },
-  "plugins": ["react", "flowtype"]
+  "plugins": ["react", "flowtype"],
+  "rules": {
+    "react/require-default-props": "off"
+  }
 }
