--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "webpack-dev-server --config ./config/webpack.config.dev.js --hot",
     "test": "npm run lint && flow status",
     "lint": "eslint \"./src/**/*.{js,jsx}\"",
-    "lint-fix": "eslint --fix \"./src/**/*.{js,jsx}\"" 
+    "lint-fix": "eslint --fix \"./src/**/*.{js,jsx}\""
   },
   "keywords": [
     "starter-kit"
@@ -25,6 +25,7 @@
     "babel-loader": "^8.0.6",
     "eslint": "^6.7.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-flowtype": "^4.4.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
