Added basic routing demo (yes, this is SPA)
To achive that I also had to install flow-typed cli to add typings to react-router
So project now has additional folder called "flow-typed" which holds custom typings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   "env": {
     "browser": true
   },
-  "plugins": ["react", "flowtype"],
+  "plugins": ["react", "react-hooks", "flowtype"],
   "rules": {
     "react/require-default-props": "off"
   }
