--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "typescript": "^3.7.5",
