--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.0.0",
@@ -47,6 +49,8 @@
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.1.3",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
