--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@spotify/eslint-config-base": "^9.0.2",
+    "@spotify/eslint-config-react": "^9.0.2",
+    "@spotify/eslint-config-typescript": "^9.0.0",
+    "@spotify/prettier-config": "^9.0.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
@@ -39,9 +43,9 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.5.2",
@@ -49,6 +53,7 @@
     "html-webpack-plugin": "^5.3.0",
     "path": "^0.12.7",
     "postcss-loader": "^5.1.0",
+    "prettier": "^2.2.1",
     "style-loader": "^2.0.0",
     "typescript": "^4.2.3",
     "webpack": "^5.24.3",
