--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "core-js": "^3.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
