--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@spotify/prettier-config": "^10.0.0",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "astroturf": "^1.0.0-beta.22",
@@ -65,7 +64,6 @@
   "dependencies": {
     "core-js": "^3.15.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-dom": "^17.0.2"
   }
 }
