--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@spotify/eslint-config-react": "^10.0.0",
     "@spotify/eslint-config-typescript": "^10.0.0",
     "@spotify/prettier-config": "^10.0.0",
+    "@spotify/tsconfig": "^11.0.0",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
