--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "core-js": "^3.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
