--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@ibm/plex": "^5.2.1",
+    "classnames": "^2.3.1",
     "core-js": "^3.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
