--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@spotify/tsconfig",
   "compilerOptions": {
-    "jsx": "react"
+    "jsx": "react",
+    "noEmit": false,
+    
   }
 }
